--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
         {% block navbar %}
         <nav>
           <div id = "header">
-            <h1>Word List Program</h1>
+            <h1>CookBook</h1>
           </div>
         </nav>
         {% endblock %}
