--- a/templates/base.html
+++ b/templates/base.html
@@ -1,30 +1,25 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="/static/wordstyle.css">
-    </head>
-    <body>
-      <center>
-        {% block navbar %}
-        <nav>
-          <div id = "header">
-            <h1>CookBook</h1>
-          </div>
-        </nav>
-        {% endblock %}
+{% extends 'bootstrap/base.html' %}
 
-        {% block content %}
-        default content
-        {% endblock %}
+{% block title %}
+  Family CookBook
+{% endblock %}
 
-        {% block footer %}
-        <div id = "footer">
-          <p>Based off Professor Miller's example in CSCI 4131. Extended by Siraj Hassan. </p>
-            <a href="https://github.com/SirajHassan/Assign6">GitRepo</a>
-        </div>
-         {% endblock %}
+{% block navbar %}
+    <nav class="navbar navbar-default">
+    </nav>
+{% endblock %}
 
-      </center>
+{% block content %}
+    <div class="container">
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+            <div class="alert alert-info" role="alert">{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+        {% endwith %}
 
-
-    </body>
-</html>
+        {# application content needs to be provided in the app_content block #}
+        {% block app_content %}{% endblock %}
+    </div>
+{% endblock %}
