--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,7 @@
-{% extends "base.html" %}
-{% block content %}
-    <h1>CookBook</h1>
+{% extends "bootstrap/base.html" %}
+{% import "bootstrap/wtf.html" as wtf%}
+
+
+{% block app_content %}
+  <h1>Index</h1>
 {% endblock %}
