--- a/templates/login.html
+++ b/templates/login.html
@@ -2,21 +2,20 @@
 {% import "bootstrap/wtf.html" as wtf  %}
 
 {% block title %}
-  <title>Family Cook Book</title>
+  Family Cook Book - Sign In
 {% endblock %}
 
 
 {% block content %}
-<div class = "container">
-  <body>
-    <form method = "POST" action = "/">
-      <dl>
-        {{ form.csrf_toekn}}
-        {{ wtf.form_field(form.username) }}
-        {{ wtf.form_field(form.password) }}
-        <input type="submit" value="Login">
-      </dl>
-    </form>
-  </body>
-<div class = "container">
+<div class="container">
+
+  <form class="form-signin" method = "POST" action = /login>
+    <h2 class="form-signin-heading">Login</h2>
+    {{ form.hidden_tag() }}
+    {{ wtf.form_field(form.username) }}
+    {{ wtf.form_field(form.family_pin) }}
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+  </form>
+
+</div> <!-- /container -->
 {% endblock %}
