--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,6 +8,7 @@
 
 {% block content %}
 
+
 <!-- check for flash messages in case of invalid input -->
 <center style = 'red'>
 {% with messages = get_flashed_messages() %}
@@ -24,7 +25,9 @@
 <div class="container">
 
   <form class="form-signin" method = "POST" action = /signup>
+    <center>
     <h2 class="form-signin-heading">Sign Up</h2>
+    </center>
     {{ form.hidden_tag() }}
     {{ wtf.form_field(form.username) }}
     <h6>
@@ -35,7 +38,10 @@
     {{ wtf.form_field(form.new_cook_book)}}
     {{ wtf.form_field(form.family_name) }}
     {{ wtf.form_field(form.family_pin) }}
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
+
+    <button type="button" class="btn btn-link btn-block">
+      <a href="/login">Back to Login</a>
   </form>
 
 </div> <!-- /container -->
