--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,4 @@
 {% extends "bootstrap/base.html" %}
 {% import "bootstrap/wtf.html" as wtf%}
 
-
-{% block app_content %}
-  <h1>Index</h1>
-{% endblock %}
+<h1> hello </h1>
