recipe aspect works

--- a/templates/create.html
+++ b/templates/create.html
@@ -1,6 +1,8 @@
-
 {% import "bootstrap/wtf.html" as wtf %}
 
+
+
+{% block app_content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,8 +20,9 @@
     {{ form.hidden_tag() }}
     {{ wtf.form_field(form.name) }}
     <textarea id= "summernote" name = "editordata" ></textarea>
+    <center>
     <input type = "submit" value = "Add Recipe">
-
+    </center>
 
 
   <script>
@@ -29,3 +32,5 @@
   </script>
 </body>
 </html>
+
+{% endblock %}
