--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,5 +12,14 @@
 
 
 {% block app_content %}
-  <h1> Welcome To Your Family's CookBook! </h1>
+  <center>
+    <h1> Welcome to the {{ family_name }}  Cook Book! </h1>
+  <center>
+
+  <!-- <center>
+      <h3> About the Cook Book Web App: </h1>
+  <center> -->
+
+
+  
 {% endblock %}
