Meal Finder Works

--- a/templates/breakfast.html
+++ b/templates/breakfast.html
@@ -76,7 +76,7 @@ for loop through.. create a div. the div should be a 1x3 grid.
    </form>
   </td>
  <td class="Link">
-   <form action="{{link}}" class = "button" id = "link_button">
+   <form action="/find/{{recipe[0].name}}" class = "button" id = "link_button">
      <input type="submit" value="Find the dish nearby" />
    </form>
   </td>
