--- a/templates/login.html
+++ b/templates/login.html
@@ -9,6 +9,10 @@
 {% block content %}
 
 <!-- check for flash messages in case of invalid input -->
+<center>
+<h1 class="form-signin-heading">Welcome to the Family Cook Book</h1>
+</center>
+
 <center style = 'red'>
 {% with messages = get_flashed_messages() %}
   {% if messages %}
@@ -25,7 +29,7 @@
 
   <form class="form-signin" method = "POST" action = /login>
     <center>
-    <h2 class="form-signin-heading">Login</h2>
+    <h3 class="form-signin-heading">Login </h2>
     </center>
     {{ form.hidden_tag() }}
     {{ wtf.form_field(form.username) }}
