--- a/templates/snacks.html
+++ b/templates/snacks.html
@@ -51,7 +51,7 @@ for loop through.. create a div. the div should be a 1x3 grid.
 
 <center>
 
-  
+
 
 <table class = "RecipeBox">
 
@@ -75,7 +75,7 @@ for loop through.. create a div. the div should be a 1x3 grid.
    </form>
   </td>
  <td class="Link">
-   <form action="{{link}}" class = "button" id = "link_button">
+   <form action="/find/{{recipe[0].name}}" class = "button" id = "link_button">
      <input type="submit" value="Find the dish nearby" />
    </form>
   </td>
