--- a/templates/edit.html
+++ b/templates/edit.html
@@ -14,9 +14,11 @@
   <script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.12/summernote.js"></script>
 </head>
 <body>
+<center>
+
 
   <center>
-    <h1> You are editing: {{name}} </h1>
+    <h3> You are editing: {{name}} </h3>
   </center>
 
 
@@ -40,5 +42,6 @@
     $('#summernote').summernote('code', markupStr);
 
   </script>
+</center>
 </body>
 </html>
