--- a/templates/create.html
+++ b/templates/create.html
@@ -15,6 +15,7 @@
   <script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.12/summernote.js"></script>
 </head>
 <body>
+  <center>
 
   <form method = "post" enctype= "multipart/form-data" >
     {{ form.hidden_tag() }}
@@ -23,6 +24,8 @@
     <center>
     <input type = "submit" value = "Add Recipe">
     </center>
+
+  </center>
 
 
   <script>
