--- a/templates/create.html
+++ b/templates/create.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-
+<center>
   <form method = "post" enctype= "multipart/form-data" >
     {{ form.hidden_tag() }}
     <center>
@@ -27,7 +27,7 @@
     <input type = "submit" value = "Add Recipe">
     </center>
 
-
+</center>
 
 
   <script>
